--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/Baby-Cover.jpg
     - assets/images/login/Rectangle3.png
     - assets/images/login/Ellipse1.png
     - assets/images/mainscreen/Rectangle31.png
@@ -59,6 +60,8 @@ flutter:
     - assets/images/camera/
     - assets/images/community/
     - assets/images/newrequest/
+    - assets/images/help/
+    
     # - assets/images/mainscreen/rectangle3.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
