--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg : ^0.19.3
+  flutter_swiper: ^1.1.6
+  firebase_core: ^0.4.0+1
+  #firebase_analytics: ^4.0.2
+  cloud_firestore: ^0.12.9+4
+  firebase_auth: ^0.14.0+5
+  firebase_storage: ^3.0.6
+  google_sign_in: ^4.0.7
+  shared_preferences: ^2.0.5
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +69,7 @@ flutter:
     - assets/images/community/
     - assets/images/newrequest/
     - assets/images/help/
+    - assets/images/mom/
     
     # - assets/images/mainscreen/rectangle3.svg
 
