--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,13 +31,19 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg : ^0.19.3
   flutter_swiper: ^1.1.6
-  firebase_core: ^0.4.0+1
+  #firebase_core: ^0.4.0+1
   #firebase_analytics: ^4.0.2
-  cloud_firestore: ^0.12.9+4
-  firebase_auth: ^0.14.0+5
-  firebase_storage: ^3.0.6
-  google_sign_in: ^4.0.7
+  #cloud_firestore: ^0.12.9+4
+  #firebase_auth: ^0.14.0+5
+  #firebase_storage: ^3.0.6
+  #google_sign_in: ^4.0.7
   shared_preferences: ^2.0.5
+  firebase_core: ^1.0.3
+  firebase_auth: ^1.1.0
+  cloud_firestore: ^1.0.5
+  provider: ^5.0.0
+  flutter_spinkit: ^5.0.0
+  email_validator: '^1.0.0'
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +76,7 @@ flutter:
     - assets/images/newrequest/
     - assets/images/help/
     - assets/images/mom/
+    - assets/images/helper/
     
     # - assets/images/mainscreen/rectangle3.svg
 
